--- a/app/views/dynamic_pages/home.html.erb
+++ b/app/views/dynamic_pages/home.html.erb
@@ -3,8 +3,8 @@
     <nav class="left-menu">
       <ul>
         <li><%= link_to 'BodyMetric', new_body_metric_path(current_user.id) %></li>
-        <li><%= link_to 'FoodList',"#" %></li>
-        <li><%= link_to 'FoodRecord',"#" %></li>
+        <li><%= link_to 'FoodList',new_food_item_path %></li>
+        <li><%= link_to 'FoodRecord', new_food_record_path %></li>
         <li><%= link_to 'WorkoutVideos',"#" %></li>
       </ul>
     </nav>
