--- a/app/views/body_metrics/edit.html.erb
+++ b/app/views/body_metrics/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>TDEE CALCULATOR</h1>
-<%= form_for ([current_user,@edit_body_metric]) do |f| %>
+<%= form_for @edit_body_metric do |f| %>
   <%= f.label 'height' %>
   <%= f.integer_field 'height' %>
   <%= f.label 'weight' %>
