--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,5 @@
-<nav class="navbar navbar-default navbar-fixed-bottom">
+<nav class=" bottom ">
   <div class="container">
+    <p>&copy;Copyrights reserved</p>
   </div>
 </nav>
