--- a/app/views/body_metrics/edit.html.erb
+++ b/app/views/body_metrics/edit.html.erb
@@ -1,16 +1,15 @@
 <h1>TDEE CALCULATOR</h1>
-<%= form_for @edit_body_metric do |f| %>
-  <%= f.label 'height' %>
-  <%= f.integer_field 'height' %>
-  <%= f.label 'weight' %>
-  <%= f.integer_field 'weight' %>
-  <%= f.label 'Activity Level' %>
-  <%= f.radio_button 'activity_level','1.2' %>Sedenetary
-  <%= f.radio_button 'activity_level','1.375' %>Lightly Avtive
-  <%= f.radio_button 'activity_level','1.55' %>Moderately Active
-  <%= f.radio_button 'activity_level','1.725' %>Very Active
-  <%= f.radio_button 'activity_level','1.9' %>Extremely Active
-  <%= f.integer_field 'height' %>
-  <%= f.submit 'Calculate TDEE' %>
+<%= form_for @edit_body_metric, url: update_body_metric_path, class:'form-horizontal' do |f| %>
+  <%= f.label :height %>
+  <%= f.number_field :height,class:'form-control' %>
+  <%= f.label :weight %>
+  <%= f.number_field :weight, class:'form-control' %>
+  <%= f.label 'Activity Level' %><br>
+  <%= f.radio_button :activity_level,'1.2' %>Sedenetary<br>
+  <%= f.radio_button :activity_level,'1.375' %>Lightly Avtive<br>
+  <%= f.radio_button :activity_level,'1.55' %>Moderately Active<br>
+  <%= f.radio_button :activity_level,'1.725' %>Very Active<br>
+  <%= f.radio_button :activity_level,'1.9' %>Extremely Active<br>
+  <%= f.submit 'Calculate TDEE', class:'btn btn-default' %>
 <% end %>
 
