--- a/app/views/food_items/index.html.erb
+++ b/app/views/food_items/index.html.erb
@@ -1,16 +1,28 @@
-<table>
-<tr>
-  <th>Item<th>
-  <th>Quantity<th>
-  <th>Metrics<th>
-  <th>Calories<th>
-</tr>
-<% @food_list.each do |food_item| %>
-<tr>
-  <td><%= food_item.item %></td>
-  <td><%= food_item.quantity %></td>
-  <td><%= food_item.metrics %></td>
-  <td><%= food_item.calories %></td>
-</tr>
+
+<% if current_user.admin? %>
+  <%= render :template => 'food_items/new' %>
 <% end %>
+<table class='table table-hover'>
+  <tr>
+    <th>Item</th>
+    <th>Quantity</th>
+    <th>Metrics</th>
+    <th>Calories</th>
+    <% if current_user.admin? %>
+      <th>Edit</th>
+      <th>Delete</th>
+    <% end %>
+  </tr>
+  <% @food_list.each do |food_item| %>
+    <tr>
+      <td><%= food_item.item %></td>
+      <td><%= food_item.quantity %></td>
+      <td><%= food_item.metrics %></td>
+      <td><%= food_item.calories %></td>
+      <%if current_user.admin? %>
+        <td><%= link_to 'Edit', edit_food_item_path(food_item.id) %></td>
+        <td><%= link_to 'Delete', destroy_food_item_path(food_item.id),:method => :delete %>
+      <% end %>
+    </tr>
+  <% end %>
 </table>
