--- a/app/views/food_records/edit.html.erb
+++ b/app/views/food_records/edit.html.erb
@@ -1,6 +1,7 @@
+
 <%= form_for @edit_food_record,url: update_food_record_path(@edit_food_record.id), class:'form-horizontal' do |f| %>
   <%= f.label 'Item' %>
-  <%= f.text_field :item, class:'form-control'%>
+  <%= f.select :item,FoodItem.all.collect {|a| a.item }, propmt: "Select Item", class: "form-control" %><br/>
   <%= f.label 'Quantity' %>
   <%= f.number_field :quantity, class:'form-control' %>
   <%= f.label 'Intake date' %>
