--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container">
     <div class="logo">
-      <%= image_tag("logo.jpg", :alt => "home image", :width => 100, :height => 100, class: "image-logo") %>
+      <%= link_to image_tag("logo.jpg", :alt => "home image", :width => 100, :height => 100, class: "image-logo"),root_path %>
       <div class="subtitle"> Eat Healthy Stay Healthy</div>
     </div>
     <nav >
