added food record log feature

--- a/app/views/layouts/_left.html.erb
+++ b/app/views/layouts/_left.html.erb
@@ -4,6 +4,7 @@
     <li><%= link_to 'FoodList',food_items_path %></li>
     <li><%= link_to 'FoodRecord', new_food_record_path %></li>
     <li><%= link_to 'WorkoutVideos',"#" %></li>
+    <li><%= link_to 'Check Food Record Log', check_log_path %></li>
   </ul>
 </nav>
 
