added validations and did some refactoring

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -9,8 +9,6 @@ body{
   width:65%;
 }
 .btn, .btn-default{
- background-color:#0095ff;
- color:#fff;
 }
 .links-top{
   list-style:none;
@@ -73,6 +71,10 @@ nav ul.navbar-right{
     text-align:center;
 }}
 
+.sign_up{
+  background-color:#735FF3;
+  color:white;
+}
 .signup{
-  text-align:center;
+  text-align: center;
 }
