--- a/app/views/food_items/new.html.erb
+++ b/app/views/food_items/new.html.erb
@@ -1,4 +1,5 @@
 <%= form_for @food_item,class: 'form-horizontal' do |f| %>
+  <%= render 'shared/error_messages',object: f.object %>
   <%= f.label 'Item' %>
   <%= f.text_field :item, class:'form-control' %>
   <%= f.label 'Quantity' %>
@@ -7,6 +8,6 @@
   <%= f.text_field :metrics, class:'form-control' %>
   <%= f.label 'Calories' %>
   <%= f.number_field :calories, class:'form-control' %>
-  <%= f.submit 'Add food item', class:'btn btn-default' %>
+  <%= f.submit 'Add food item', class:'btn btn-primary' %>
 <% end %>
 
