--- a/app/views/food_items/edit.html.erb
+++ b/app/views/food_items/edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @food_item,url: update_food_item_path(@food_item.id), class: 'form-horizontal' do |f| %>
+<%= form_for @food_item, url: update_food_item_path(@food_item), class: 'form-horizontal' do |f| %>
   <%= render 'shared/error_messages',object: f.object %>
   <%= f.label 'Item' %>
   <%= f.text_field :item, class:'form-control' %>
