--- a/app/views/food_items/index.html.erb
+++ b/app/views/food_items/index.html.erb
@@ -1,7 +1,7 @@
 <% if current_user.admin? %>
   <%= render :template => 'food_items/new' %>
 <% end %>
-<% if @food_list.count != 0 %>
+<% if @food_items.present? %>
   <table class='table table-hover'>
     <tr>
       <th>Item</th>
@@ -13,7 +13,7 @@
         <th>Delete</th>
       <% end %>
     </tr>
-    <% @food_list.each do |food_item| %>
+    <% @food_items.each do |food_item| %>
       <tr>
         <td><%= food_item.item %></td>
         <td><%= food_item.quantity %></td>
