--- a/app/views/layouts/_left.html.erb
+++ b/app/views/layouts/_left.html.erb
@@ -3,7 +3,7 @@
     <li><%= link_to 'BodyMetric', new_body_metric_path %></li>
     <li><%= link_to 'FoodList',food_items_path %></li>
     <li><%= link_to 'FoodRecord', new_food_record_path %></li>
-    <li><%= link_to 'WorkoutVideos',"#" %></li>
+    <li><%= link_to 'WorkoutVideos', new_workout_path %></li>
     <li><%= link_to 'Check Food Record Log', check_log_path %></li>
   </ul>
 </nav>
