--- a/app/views/layouts/_left.html.erb
+++ b/app/views/layouts/_left.html.erb
@@ -4,7 +4,11 @@
     <li><%= link_to 'BodyMetric', new_body_metric_path %></li>
     <li><%= link_to 'FoodList',food_items_path %></li>
     <li><%= link_to 'FoodRecord', new_food_record_path %></li>
-    <li><%= link_to 'WorkoutVideos', new_workout_path %></li>
+    <% if current_user.admin? %>
+      <li><%= link_to 'WorkoutVideos', new_workout_path %></li>
+    <% else %>
+      <li><%= link_to 'WorkoutVideos', workouts_path %></li>
+    <% end %>
     <li><%= link_to 'Food Record Log', check_log_path %></li>
   </ul>
 </nav>
