added food items suggestion

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -63,6 +63,13 @@ nav ul.navbar-right{
       padding:8px;
   }}
 }
+.home-right{
+position:absolute;
+right:0;
+top:105px;
+bottom:50px;
+padding-right:10px;
+}
 .calorie-home{
   background-color:#EEEEEE;
   border-radius:2px;
