--- a/app/views/food_items/new.html.erb
+++ b/app/views/food_items/new.html.erb
@@ -9,7 +9,7 @@
   <%= f.label 'Calories' %>
   <%= f.number_field :calories, class:'form-control' %>
   <div class='form-group'>
-    <%= f.label 'Preffered Time' %><br>
+    <%= f.label 'Preferred Time' %><br>
     <%= f.radio_button :preferred_time,'morning' %>Morning<br>
     <%= f.radio_button :preferred_time,'afternoon' %>Afternoon<br>
     <%= f.radio_button :preferred_time,'evening' %>Evening<br>
