--- a/app/views/food_items/suggestion.html.erb
+++ b/app/views/food_items/suggestion.html.erb
@@ -1,5 +1,6 @@
+
 Suggested Items to eat
-<table class = "table">
+<table class = "table table-suggestion ">
   <tr>
     <th>Item</th>
     <th>Calories</th>
