--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,11 @@
       <% if user_signed_in? %>
         <%= render 'layouts/left' %>
       <% end %>
+      <% flash.each do |message_type, message| %>
+        <div class="alert alert-<%= message_type %>"><%= message %></div>
+      <% end %>
       <%= yield %>
-      </div>
+    </div>
     <%= render 'layouts/footer' %>
   </body>
 </html>
