--- a/app/views/workouts/new.html.erb
+++ b/app/views/workouts/new.html.erb
@@ -1,10 +1,30 @@
 <% if current_user.admin? %>
-<%= form_for @workout, class: 'form-horizontal' do |f|%>
-  <%= render 'shared/error_messages',object: f.object %>
-  <%= f.label :title %>
-  <%= f.text_field :title, class:'form-control' %>
-  <%= f.label :youtube_url %>
-   <%= f.text_field :youtube_url, class:'form-control' %>
-  <%= f.submit "Add Video",class:"btn btn-primary" %>
-<% end %>
+  <%= form_for @workout, class: 'form-horizontal' do |f|%>
+    <%= render 'shared/error_messages',object: f.object %>
+    <%= f.label :title %>
+    <%= f.text_field :title, class:'form-control' %>
+    <%= f.label :youtube_url %>
+    <%= f.text_field :youtube_url, class:'form-control' %>
+    <%= f.submit "Add Video",class:"btn btn-primary marginbottom" %>
+  <% end %>
+  <%= form_tag workouts_path, :method => 'get', class:'form-horizontal' do %>
+    <%= text_field_tag :term, params[:term],class: 'form-control' %>
+    <%= submit_tag 'Search',class:"btn btn-primary" %>
+  <% end %>
+  <% @workouts.each do |workout| %>
+    <div class="video-title">
+      <div class="embed-container">
+        <%= embed(workout.youtube_url) %>
+      </div>
+      <div class="title-for-video">
+        <p class="workout-title"><%= workout.title %></p>
+        <% if current_user.admin? %>
+          <p>
+          <%= link_to 'Edit',edit_workout_path(workout.id),class:'btn btn-default' %>
+          <%= link_to 'Delete',destroy_workout_path(workout.id),:method => :delete,class:'btn btn-default' %>
+          </p>
+        <% end %>
+      </div>
+    </div>
+  <% end %>
 <% end%>
