--- a/app/views/food_items/suggestion.html.erb
+++ b/app/views/food_items/suggestion.html.erb
@@ -1,5 +1,5 @@
 
-Suggested Items to eat
+<div class="home-right">Suggested Items to eat</div>
 <table class = "table table-suggestion ">
   <tr>
     <th>Item</th>
