--- a/app/views/food_records/graph.html.erb
+++ b/app/views/food_records/graph.html.erb
@@ -5,7 +5,7 @@ $(function(){
       renderTo: "charts-food"
     },
    title: {
-   text: "Graph between Intake calories and date"
+   text: "Graph between Intake calories and present week"
    },
     xAxis: {
       title: {
