--- a/app/views/workouts/index.html.erb
+++ b/app/views/workouts/index.html.erb
@@ -1,6 +1,6 @@
 <%= form_tag workouts_path, :method => 'get', class:'form-horizontal' do %>
   <%= text_field_tag :term, params[:term],class: 'form-control' %>
-  <%= submit_tag 'Search',class:"btn btn-primary" %>
+  <%= submit_tag 'search', class:"btn btn-primary" %>
 <% end %>
 <% @workouts.each do |workout| %>
   <div class="video-title">
