--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,21 +2,25 @@
 <html>
   <head>
     <title>EatHealthyStayHealthy</title>
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-    <%= javascript_include_tag 'application', 'highcharts', 'rails','jquery-1.11.3.min','dynamic_pages.js', 'data-turbolinks-track' => true %>
+    <%= stylesheet_link_tag    'application', media: 'all' %>
+    <%= javascript_include_tag 'application' %>
     <%= csrf_meta_tags %>
   </head>
   <body>
     <%= render 'layouts/header' %>
     <div class="center">
-      <% if user_signed_in? %>
-        <%= render 'layouts/left' %>
-      <% end %>
-      <% flash.each do |message_type, message| %>
-        <div class="alert alert-<%= message_type %>"><%= message %></div>
-      <% end %>
-      <%= yield %>
+      <div class="row">
+        <% if user_signed_in? %>
+          <%= render 'layouts/left' %>
+        <% end %>
+        <% flash.each do |message_type, message| %>
+          <div class="alert alert-<%= message_type %>"><%= message %></div>
+        <% end %>
+        <%= yield %>
+      </div>
     </div>
-    <%= render 'layouts/footer' %>
+    <div>
+      <%= render 'layouts/footer' %>
+    </div>
   </body>
 </html>
